{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 11,
  "lineage": "cbe83fe4-ae02-948b-004d-0eb5dba3fa04",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-09T22:19:50.538-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sp-terra-project/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "priority": 1000,
            "project": "sp-terra-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sp-terra-project/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2896338901706983557",
            "numeric_id": "2896338901706983557",
            "project": "sp-terra-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "default_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "as_paths": [],
            "creation_timestamp": "2025-03-09T22:19:50.562-07:00",
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/sp-terra-project/global/routes/default-internet-route",
            "name": "default-internet-route",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/gateways/default-internet-gateway",
            "next_hop_hub": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_inter_region_cost": "",
            "next_hop_ip": "",
            "next_hop_med": "",
            "next_hop_network": "",
            "next_hop_origin": "",
            "next_hop_peering": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "sp-terra-project",
            "route_status": "",
            "route_type": "",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/routes/default-internet-route",
            "tags": null,
            "timeouts": null,
            "warnings": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-09T22:19:52.809-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/sp-terra-project/regions/us-central1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "project": "sp-terra-project",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "sp-terra-project/us-central1/nat-router/cloud-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sp-terra-project",
            "region": "us-central1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.my_vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-09T22:19:52.261-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/sp-terra-project/regions/us-central1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2300252128840763543
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-09T22:19:53.227-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/sp-terra-project/regions/us-central1/subnetworks/private-subnet-2",
            "ip_cidr_range": "10.0.4.0/24",
            "name": "private-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/private-subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4341355634556651670
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-09T22:19:51.988-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sp-terra-project/regions/us-central1/subnetworks/public-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/public-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3350086906445809816
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-09T22:19:52.261-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/sp-terra-project/regions/us-central1/subnetworks/public-subnet-2",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "public-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sp-terra-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sp-terra-project/regions/us-central1/subnetworks/public-subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1736835321064310935
          },
          "dependencies": [
            "google_compute_network.my_vpc"
          ]
        }
      ]
    }
  ]
}